# Pretty_LLDB

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
Assets/: Makefile
Assets/PlantUML/: README.md  extraction_domain_model.puml  project_architecture_overview.puml  project_module_dependency_map.puml  tree_summary_sequence.puml  web_visualizer_sequence.puml
LLDB_Formatters/: __init__.py  abi_layouts.py  command_helpers.py  config.py  diagnostics.py  extraction.py  graph.py  helpers.py  linear.py  pointers.py  registry.py  renderers.py  schema_adapters.py  strategies.py  summary_contract.py  synthetic_support.py  tree.py  visualization_options.py  web_visualizer.py
LLDB_Formatters/templates/: graph_visualizer.html  list_visualizer.html  tree_visualizer.html
LLDB_Formatters/templates/static/: common.js  style.css
LLDB_Formatters/tests/: lldb_integration.py  mock_lldb.py  test_command_ux.py  test_diagnostics.py  test_extraction.py  test_graph_formatters.py  test_linear_formatters.py  test_linear_strategy.py  test_lldb_integration.py  test_pointers.py  test_renderers.py  test_schema_adapters.py  test_summary_semantics.py  test_synthetic_providers.py  test_tree_strategies.py  test_value_rendering.py  test_web_visualizer.py
LLDB_Formatters/tests/fixtures/: lldb_smoke.cpp
benchmarks/: benchmark_suite.py
