[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pretty-lldb"
version = "0.5.0.dev0"
description = "Advanced LLDB formatters and visualizers for C++ data structures."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["lldb", "debugger", "formatters", "c++", "visualization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/XtremeXSPC/Pretty_LLDB"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["LLDB_Formatters*"]

[tool.setuptools.package-data]
LLDB_Formatters = ["templates/*.html", "templates/static/*"]
